# libqgsq

./: CMakeLists.txt  README.md
QGSQ/: CMakeLists.txt  qgsq.cpp  qgsq.h  qgsq_global.h
QGSQ/Valve/Source/: player.cpp  player.h  player_p.h  response.cpp  response.h  serverinfo.cpp  serverinfo.h  serverinfo_p.h  serverquery.cpp  serverquery.h  serverquery_p.h
cmake/modules/: QGSQ-config.cmake.in
testapp/: CMakeLists.txt  main.cpp
